opam-version: "2.0"
name: "ubpf"
synopsis: "OCaml bindings for userspace eBPF VM"
license: "LGPL-3.0-only WITH OCaml-LGPL-linking-exception"
tags: ["org:ahrefs"]
maintainer: "Raman Varabets <roman.vorobets@gmail.com>"
authors: [
  "Raman Varabets <roman.vorobets@gmail.com>"
  "ygrek <ygrek@autistici.org>"
]
homepage: "https://github.com/ahrefs/ocaml-ubpf"
bug-reports: "https://github.com/ahrefs/ocaml-ubpf/issues"
dev-repo: "git+https://github.com/ahrefs/ocaml-ubpf.git"
available: os != "win32"
depends: [
  "ocaml" {>= "4.02"}
  "dune" {>= "2.9.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
