(library
  (name ubpf_c)
  (public_name ubpf.c)
  (c_library_flags (:standard -lstdc++))
  (foreign_archives ubpf_c))

(data_only_dirs ubpf)

(rule
  (deps (source_tree ubpf))
  (targets libubpf_c.a dllubpf_c.so)
  (action (progn
            (chdir ubpf/vm (run make))
            (bash "cp ubpf/vm/libubpf.a libubpf_c.a")
            (bash "cp ubpf/vm/dllubpf.so dllubpf_c.so"))))
